--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
         <title>HW11</title>
     </head>
     <body>
-        <div class="container">
-            <div class="item green"></div>
-            <div class="item blue"></div>
-            <div class="item yellow"></div>
-            <div class="item violet"></div>
-            <div class="item black"></div>
-            <div class="item gray">gray</div>
-        </div>
+        <section>
+            <h2>Первое задание</h2>
+            <div class="container">
+                <div class="item green"></div>
+                <div class="item blue"></div>
+                <div class="item yellow"></div>
+                <div class="item violet"></div>
+                <div class="item black"></div>
+                <div class="item gray">gray</div>
+            </div>
+        </section>
+        <section>
+            <h2>Второе задание</h2>
+            <div class="second-container">
+                <div class="grid first">1</div>
+                <div class="grid second">2</div>
+                <div class="grid third">3</div>
+                <div class="grid fifth">5</div>
+                <div class="grid sixth">6</div>
+                <div class="grid seventh">7</div>
+            </div>
+        </section>
+
     </body>
 </html>
