--- a/index2.html
+++ b/index2.html
@@ -5,43 +5,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Overpass+Mono:wght@400;700&display=swap" rel="stylesheet">
-        <title>A-level</title>
+        <title>HW11</title>
     </head>
     <body>
-        <div class="container-page">
-            <header class="header">
-                <a href="#" class="logo">
-                    <h1>A-level</h1>
-                </a>
-            </header>
-            <nav class="nav">
-                <a href="index.html" class="icon-home"></a>
-                <a href="#" class="icon-briefcase"></a>
-                <a href="#" class="icon-email-opened-envelope"></a>
-                <a href="#" class="icon-identification"></a>
-            </nav>
-            <section class="section">
-                <h2>Injecting a Line Break</h2>
-                <p>Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia ratione ducimus maxime nam corporis esse excepturi minus, sit voluptates inventore tempora ullam sunt sapiente sed dicta. Magnam eligendi quas vel voluptas qui eveniet incidunt quisquam, eum quibusdam autem adipisci voluptatibus aut possimus expedita illo repellendus laudantium dolorum voluptatem fugiat. Ipsam voluptatem dicta molestiae, illum dolorem natus sunt, unde vel suscipit praesentium architecto labore officiis recusandae deserunt? Ratione omnis tempora voluptates? ipsum dolor sit amet consectetur adipisicing elit. Nobis quos error harum odit veniam officia quasi, deleniti perspiciatis dolorem aliquid, a quae illum ducimus, sapiente eius placeat ipsum iste asperiores consectetur dolores fugiat sit reiciendis fugit aliquam. Qui, facere omnis.</p>
-            </section>
-            <aside class="aside">
-                <h2>More articles...</h2>
-                <div class="wrap">
-                    <span class="icon-loadingcircles_102612 rotate1"></span>
-                    <span class="icon-uniE904 rotate2"></span>
-                    <span class="icon-loadingcircles_102612 rotate3"></span>
-                </div>
-            </aside>
-            <footer>
-                <div class="photo-logo">
-                    <a href="#"><img src="image/a-level-logo.png" alt="A-level"></a>
-                </div>
-            </footer>
-        </div>
+        <section>
+            <h2>Первое задание</h2>
+            <div class="container">
+                <div class="item green"></div>
+                <div class="item blue"></div>
+                <div class="item yellow"></div>
+                <div class="item violet"></div>
+                <div class="item black"></div>
+                <div class="item gray">gray</div>
+            </div>
+        </section>
+        <section>
+            <h2>Второе задание</h2>
+            <div class="second-container">
+                <div class="grid first">1</div>
+                <div class="grid second">2</div>
+                <div class="grid third">3</div>
+                <div class="grid fifth">5</div>
+                <div class="grid sixth">6</div>
+                <div class="grid seventh">7</div>
+            </div>
+        </section>
+
     </body>
 </html>
